# text_processor

./: MANIFEST.in  pyproject.toml
text_processor/: __init__.py  text_processor.py
