[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "text-processor"
version = "0.1.0"
description = "Indonesian Text Processor"
authors = [{ name = "Cahya Wirawan" }]
requires-python = ">=3.8"
dependencies = [
    "num2words",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["text_processor*"]

[tool.setuptools]
include-package-data = true